<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".store.AddProductFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white"
            app:contentInsetStartWithNavigation="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/Toolbar.Light"
            app:title="Tambah Produk" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.core_util.DigiTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foto_produk"
                android:layout_marginTop="@dimen/medium"
                android:layout_marginStart="@dimen/medium"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/text_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:cardCornerRadius="@dimen/radiusMedium"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">
                <ImageView
                    android:id="@+id/firstImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/image"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/bg_image" />
            </androidx.cardview.widget.CardView>

            <com.example.core_util.DigiTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="@dimen/medium"
                android:text="@string/nama"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/text_small" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_product_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:paddingVertical="@dimen/very_small"
                android:textColorHint="@color/colorGreyishBrown"
                app:boxStrokeColor="@color/colorCobaltBlue">

                <com.example.core_util.DigiEditText
                    android:id="@+id/edt_input_product_name"
                    style="@style/EditText.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.example.core_util.DigiTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="@dimen/medium"
                android:text="@string/harga_produk"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/text_small"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_product_price"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:paddingVertical="@dimen/very_small"
                android:textColorHint="@color/colorGreyishBrown"
                app:boxStrokeColor="@color/colorCobaltBlue">

                <com.example.core_util.DigiEditText
                    android:id="@+id/edt_input_product_price"
                    style="@style/EditText.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.example.core_util.DigiTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="@dimen/medium"
                android:text="@string/jenis_handphone"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/text_small"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_type_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_skills" />

            <com.example.core_util.DigiTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="@dimen/medium"
                android:text="@string/deskripsi_produk"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/text_small" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_product_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/very_large_fit"
                android:layout_marginHorizontal="16dp"
                android:paddingVertical="@dimen/very_small"
                android:textColorHint="@color/colorGreyishBrown"
                app:boxStrokeColor="@color/colorCobaltBlue">

                <com.example.core_util.DigiEditText
                    android:id="@+id/edt_input_product_description"
                    style="@style/EditText.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:paddingHorizontal="@dimen/very_small"
                    android:paddingVertical="@dimen/medium" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.example.core_util.DigiButton
                android:id="@+id/btn_add_product"
                style="@style/ThemeOverlay.DigiServices.Button.Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="@dimen/medium"
                android:paddingVertical="@dimen/small_fit"
                android:text="@string/tambah_produk" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>

