<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    style="@style/ThemeMarginHorizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrool"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_update">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:clipToPadding="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageProfile"
                android:layout_width="@dimen/profilePictureBig"
                android:layout_height="@dimen/profilePictureBig"
                android:layout_marginTop="@dimen/medium"
                android:background="@drawable/shape_circle_placeholder"
                android:contentDescription="@string/text_profile_picture"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.example.core_util.DigiButton
                style="@style/Button"
                android:id="@+id/btn_change_photo"
                android:layout_width="150dp"
                android:layout_height="@dimen/large_mid"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/medium"
                android:background="@color/colorTransparent"
                android:paddingStart="@dimen/medium_fit"
                android:paddingEnd="@dimen/medium_fit"
                android:text="@string/ganti"
                android:textAllCaps="true"
                android:textColor="@color/colorCobaltBlue"
                android:textSize="@dimen/text_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageProfile" />

            <com.example.core_util.DigiTextView
                android:id="@+id/tv_name"
                android:layout_marginTop="@dimen/medium"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/text_small"
                android:text="@string/nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/btn_change_photo"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_layout_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/empty"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/very_small"
                android:textColorHint="@color/colorGreyishBrown"
                app:boxStrokeColor="@color/colorCobaltBlue"
                app:layout_constraintTop_toBottomOf="@+id/tv_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.example.core_util.DigiEditText
                    style="@style/EditText.Primary"
                    android:id="@+id/edt_input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.example.core_util.DigiTextView
                android:id="@+id/tv_email"
                android:layout_marginTop="@dimen/medium"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/text_small"
                android:text="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/edt_layout_name"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_layout_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/empty"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/very_small"
                android:textColorHint="@color/colorGreyishBrown"
                app:boxStrokeColor="@color/colorCobaltBlue"
                app:layout_constraintTop_toBottomOf="@+id/tv_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.example.core_util.DigiEditText
                    style="@style/EditText.Primary"
                    android:id="@+id/edt_input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.example.core_util.DigiTextView
                android:id="@+id/tv_hp"
                android:layout_marginTop="@dimen/medium"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/text_small"
                android:text="@string/nomor_handphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/edt_layout_email"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_layout_hp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/empty"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/very_small"
                android:textColorHint="@color/colorGreyishBrown"
                app:boxStrokeColor="@color/colorCobaltBlue"
                app:layout_constraintTop_toBottomOf="@+id/tv_hp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.example.core_util.DigiEditText
                    style="@style/EditText.Primary"
                    android:id="@+id/edt_input_hp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.example.core_util.DigiTextView
                android:id="@+id/tv_store_name"
                android:layout_marginTop="@dimen/medium"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/text_small"
                android:text="@string/nama_toko"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/edt_layout_hp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_layout_store_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/empty"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/very_small"
                android:textColorHint="@color/colorGreyishBrown"
                app:boxStrokeColor="@color/colorCobaltBlue"
                app:layout_constraintTop_toBottomOf="@+id/tv_store_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.example.core_util.DigiEditText
                    style="@style/EditText.Primary"
                    android:id="@+id/edt_input_store_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.example.core_util.DigiTextView
                android:id="@+id/tv_store_address"
                android:layout_marginTop="@dimen/medium"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/text_small"
                android:text="@string/alamat_toko"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/edt_layout_store_name"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_layout_store_address"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/empty"
                android:layout_height="@dimen/very_large_fit"
                android:paddingVertical="@dimen/very_small"
                android:textColorHint="@color/colorGreyishBrown"
                app:boxStrokeColor="@color/colorCobaltBlue"
                app:layout_constraintTop_toBottomOf="@+id/tv_store_address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.example.core_util.DigiEditText
                    style="@style/EditText.Primary"
                    android:id="@+id/edt_input_store_address"
                    android:layout_width="match_parent"
                    android:gravity="top"
                    android:layout_height="match_parent"
                    android:paddingVertical="@dimen/medium"
                    android:paddingHorizontal="@dimen/very_small"
                    android:inputType="textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.example.core_util.DigiTextView
                android:id="@+id/tv_store_desc"
                android:layout_marginTop="@dimen/medium"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/text_small"
                android:text="@string/deskripsi_toko"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/edt_layout_store_address"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_layout_store_desc"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/empty"
                android:layout_height="@dimen/very_large_fit"
                android:paddingVertical="@dimen/very_small"
                android:textColorHint="@color/colorGreyishBrown"
                app:boxStrokeColor="@color/colorCobaltBlue"
                app:layout_constraintTop_toBottomOf="@+id/tv_store_desc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.example.core_util.DigiEditText
                    style="@style/EditText.Primary"
                    android:id="@+id/edt_input_store_desc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:paddingVertical="@dimen/medium"
                    android:paddingHorizontal="@dimen/very_small" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.example.core_util.DigiTextView
                android:id="@+id/tv_teknisi_sertifikat"
                android:layout_marginTop="@dimen/medium"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/text_small"
                android:text="@string/skils_jenis_kerusakan_hp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/edt_layout_store_desc"/>

            <ImageButton
                android:id="@+id/btn_teknisi_sertifikat"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_teknisi_sertifikat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="Foto teknisi sertifikat"
                android:background="@color/colorBorderCard"/>

            <com.example.core_util.DigiTextView
                android:id="@+id/tv_skils"
                android:layout_marginTop="@dimen/medium"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/text_small"
                android:text="@string/skils_jenis_kerusakan_hp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/btn_teknisi_sertifikat"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_skils"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_skils"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.example.core_util.DigiTextView
                android:id="@+id/tv_hp_type"
                android:layout_marginTop="@dimen/medium"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/text_small"
                android:text="@string/jenis_hp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/rv_skils"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_hp_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_hp_type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.example.core_util.DigiButton
        android:id="@+id/btn_update"
        style="@style/ThemeOverlay.DigiServices.Button.Secondary"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/small_fit"
        android:text="@string/update"
        app:layout_constraintTop_toBottomOf="@+id/scrool"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
